third_party/WebKit/Source/core/html/HTMLLinkElement.h
@@ -29,7 +29,7 @@
 #include "core/dom/DOMTokenList.h"
 #include "core/dom/IconURL.h"
 #include "core/dom/IncrementLoadEventDelayCount.h"
-#include "core/dom/StyleEngineContext.h"
+#include "core/dom/StyleEngine.h"
 #include "core/fetch/ResourceOwner.h"
 #include "core/fetch/StyleSheetResource.h"
 #include "core/fetch/StyleSheetResourceClient.h"
@@ -75,7 +75,7 @@ public:
     bool sheetLoaded();
 
     void setDisabledState(bool);
-    void setSheetTitle(const String&);
+    void setSheetTitle(const String&, StyleEngine::ActiveSheetsUpdate = StyleEngine::DontUpdateActiveSheets);
 
     bool styleSheetIsLoading() const;
     bool hasSheet() const { return m_sheet; }
